--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -25,7 +25,7 @@ function startGame() {
 
     // Add audio effects
     crashSound = new Audio(''); // Replace with the path to your crash sound file
-    backgroundMusic = new Audio(''); // Replace with the path to your background music file
+    backgroundMusic = new Audio('ntriolo.github.io / Background music FREE DOWNLOAD (194).mp3'); // Replace with the path to your background music file
     backgroundMusic.loop = true;
     backgroundMusic.play();
 
