--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -23,9 +23,9 @@ function startGame() {
     myGamePiece.gravity = 0.05;
     myScore = new gameObject("30px", "Consolas", "black", 280, 40, "text");
 
-    // Add audio effects
-    crashSound = new Audio(''); // Replace with the path to your crash sound file
-    backgroundMusic = new Audio('ntriolo.github.io / Background music FREE DOWNLOAD (194).mp3'); // Replace with the path to your background music file
+    // Audio effects
+    crashSound = new Audio('ntriolo.github.io / mixkit-8-bit-bomb-explosion-2811.mp3'); 
+    backgroundMusic = new Audio('ntriolo.github.io / Background music FREE DOWNLOAD (194).mp3'); 
     backgroundMusic.loop = true;
     backgroundMusic.play();
 
