--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -103,7 +103,7 @@ function gameObject(width, height, color, x, y, type) {
 function updateGameArea() {
     var x, height, gap, minHeight, maxHeight, minGap, maxGap;
     for (i = 0; i < myObstacles.length; i += 1) {
-        if (myGamePiece.crashWith(myObstacles[i])) {
+        if (myGamePiece.crashWith(myObstacles[i])) {crashSound.play();  // Play crash sound when crashing
             return;
         } 
     }
