--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -24,8 +24,8 @@ function startGame() {
     myScore = new gameObject("30px", "Consolas", "black", 280, 40, "text");
 
     // Audio effects
-    crashSound = new Audio('ntriolo.github.io / mixkit-8-bit-bomb-explosion-2811.mp3'); 
-    backgroundMusic = new Audio('ntriolo.github.io / Background music FREE DOWNLOAD (194).mp3'); 
+    crashSound = new Audio('mixkit-8-bit-bomb-explosion-2811.mp3'); 
+    backgroundMusic = new Audio('Background music FREE DOWNLOAD (194).mp3'); 
     backgroundMusic.loop = true;
     backgroundMusic.play();
 
