--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -25,7 +25,7 @@ function startGame() {
 
     // Audio effects
     crashSound = new Audio('mixkit-8-bit-bomb-explosion-2811.mp3'); 
-    backgroundMusic = new Audio('Background music FREE DOWNLOAD (194).mp3'); 
+    backgroundMusic = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/Background%20music%20FREE%20DOWNLOAD%20(194).mp3"); 
     backgroundMusic.loop = true;
     backgroundMusic.play();
 
