--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -24,7 +24,7 @@ function startGame() {
     myScore = new gameObject("30px", "Consolas", "black", 280, 40, "text");
 
     // Audio effects
-    crashSound = new Audio('mixkit-8-bit-bomb-explosion-2811.mp3'); 
+    crashSound = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/mixkit-8-bit-bomb-explosion-2811.mp3"); 
     backgroundMusic = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/Background%20music%20FREE%20DOWNLOAD%20(194).mp3"); 
     backgroundMusic.loop = true;
     backgroundMusic.play();
