--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -103,7 +103,8 @@ function gameObject(width, height, color, x, y, type) {
 function updateGameArea() {
     var x, height, gap, minHeight, maxHeight, minGap, maxGap;
     for (i = 0; i < myObstacles.length; i += 1) {
-        if (myGamePiece.crashWith(myObstacles[i])) {crashSound.play();  // Play crash sound when crashing
+        if (myGamePiece.crashWith(myObstacles[i])) {
+            crashSound.play();  // Play crash sound when crashing
             return;
         } 
     }
@@ -138,6 +139,12 @@ function everyinterval(n) {
 
 function accelerate(n) {
     myGamePiece.gravity = n;
+
+    // Start music if it hasn't started yet (on first user interaction)
+    if (!musicStarted) {
+        backgroundMusic.play();
+        musicStarted = true;
+    }
 }
 </script>
 <br>
