--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -26,7 +26,7 @@ function startGame() {
 
     // Initialize audio effects
     crashSound = new Audio('canvas/mixkit-8-bit-bomb-explosion-2811.mp3'); // Replace with correct path to your crash sound file
-    backgroundMusic = new Audio('background.mp3'); // Replace with correct path to your background music file
+    backgroundMusic = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/canvas/Background%20music%20FREE%20DOWNLOAD%20(194).mp3"); // Replace with correct path to your background music file
     backgroundMusic.loop = true; // Loop background music
 
     myGameArea.start();
