--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -25,7 +25,7 @@ function startGame() {
     myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
     // Initialize audio effects
-    crashSound = new Audio('canvas/mixkit-8-bit-bomb-explosion-2811.mp3'); // Replace with correct path to your crash sound file
+    crashSound = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/canvas/mixkit-8-bit-bomb-explosion-2811.mp3"); // Replace with correct path to your crash sound file
     backgroundMusic = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/canvas/Background%20music%20FREE%20DOWNLOAD%20(194).mp3"); // Replace with correct path to your background music file
     backgroundMusic.loop = true; // Loop background music
 
