--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -22,7 +22,7 @@ var musicStarted = false; // Track whether music has started
 function startGame() {
     myGamePiece = new component(30, 30, "red", 10, 120);
     myGamePiece.gravity = 0.05;
-    myScore = new component("30px", "Consolas", "black", 280, 40, "text");
+    myScore = new component("30px", "Consolas", "blue", 280, 40, "text");
 
     // Initialize audio effects
     crashSound = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/canvas/mixkit-8-bit-bomb-explosion-2811.mp3"); // Replace with correct path to your crash sound file
