--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -9,7 +9,7 @@ canvas {
 }
 </style>
 </head>
-<body onload="startGame()">
+<body>
 <script>
 
 var myGamePiece;
@@ -18,20 +18,24 @@ var myScore;
 var crashSound;
 var backgroundMusic;
 var musicStarted = false; // Track whether music has started
+var gamePaused = false; // Track game pause state
+var gameRunning = false; // Track if the game has started
+var gameInterval; // Store the interval reference for pausing/resuming
 
 function startGame() {
-    myGamePiece = new component(30, 30, "red", 10, 120);
-    myGamePiece.gravity = 0.05;
-    myScore = new component("30px", "Consolas", "black", 280, 40, "text");
+    if (!gameRunning) {
+        myGamePiece = new component(30, 30, "red", 10, 120);
+        myGamePiece.gravity = 0.05;
+        myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
-    // Initialize audio effects
-    crashSound = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/canvas/mixkit-8-bit-bomb-explosion-2811.mp3"); // Replace with correct path to your crash sound file
-    backgroundMusic = new Audio("https://github.com/ntriolo/ntriolo.github.io/blob/main/canvas/Background%20music%20FREE%20DOWNLOAD%20(194).mp3"); // Replace with correct path to your background music file
-    backgroundMusic.loop = true; // Loop background music
+        // Initialize audio effects
+        crashSound = new Audio('crash.mp3'); // Replace with correct path to your crash sound file
+        backgroundMusic = new Audio('background.mp3'); // Replace with correct path to your background music file
+        backgroundMusic.loop = true; // Loop background music
 
-   myGameArea.start();
-    window.addEventListener('keydown', moveKey); // Add keyboard control
-    window.addEventListener('keyup', stopMove);  // Stop movement when key is released
+        myGameArea.start();
+        gameRunning = true; // Mark the game as started
+    }
 }
 
 var myGameArea = {
@@ -42,10 +46,16 @@ var myGameArea = {
         this.context = this.canvas.getContext("2d");
         document.body.insertBefore(this.canvas, document.body.childNodes[0]);
         this.frameNo = 0;
-        this.interval = setInterval(updateGameArea, 20);
+        this.interval = setInterval(updateGameArea, 20); // Start game loop
+        gameInterval = this.interval; // Store interval for pausing and resuming
+        window.addEventListener('keydown', moveKey); // Add keyboard control
+        window.addEventListener('keyup', stopMove);  // Stop movement when key is released
     },
     clear : function() {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
+    },
+    stop : function() {
+        clearInterval(this.interval); // Stop the game loop
     }
 }
 
@@ -147,10 +157,10 @@ function moveKey(e) {
             myGamePiece.speedY = 6;  // Move down
             break;
         case 'ArrowLeft':
-            myGamePiece.speedX = -2; // Move left
+            myGamePiece.speedX = -6; // Move left
             break;
         case 'ArrowRight':
-            myGamePiece.speedX = 2;  // Move right
+            myGamePiece.speedX = 6;  // Move right
             break;
     }
 
@@ -175,15 +185,29 @@ function stopMove(e) {
     }
 }
 
-// Accelerate function for button control (optional)
-function accelerate(n) {
-    myGamePiece.gravity = n;
+// Pause or continue the game
+function togglePauseGame() {
+    if (gamePaused) {
+        // Continue the game
+        myGameArea.interval = setInterval(updateGameArea, 20); // Resume the game loop
+        gamePaused = false;
+        document.getElementById('pauseButton').textContent = "Pause";
+    } else {
+        // Pause the game
+        clearInterval(myGameArea.interval); // Pause the game loop
+        gamePaused = true;
+        document.getElementById('pauseButton').textContent = "Continue";
+    }
 }
 
 </script>
+
+<!-- Buttons for starting and pausing the game -->
+<button onclick="startGame()">Start Game</button>
+<button id="pauseButton" onclick="togglePauseGame()">Pause</button>
+
 <br>
-<button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">ACCELERATE</button>
-<p>Use the ACCELERATE button to stay in the air or control with arrow keys</p>
-<p>How long can you stay alive?</p>
+<p>Use arrow keys to control the red square, or use the accelerate button to adjust gravity</p>
+
 </body>
 </html>
