--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -30,7 +30,7 @@ function startGame() {
 
         // Initialize audio effects
         crashSound = new Audio('crash.mp3'); // Replace with correct path to your crash sound file
-        backgroundMusic = new Audio('background.mp3'); // Replace with correct path to your background music file
+        backgroundMusic = new Audio('canvas/Background music FREE DOWNLOAD (194).mp3'); // Replace with correct path to your background music file
         backgroundMusic.loop = true; // Loop background music
 
         myGameArea.start();
