--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -25,7 +25,7 @@ var gameInterval;
 function startGame() {
     if (!gameRunning) {
         // Create the game character (image instead of red square)
-        myGamePiece = new component(30, 30, "", 10, 120, "image"); // Replace "character.png" with your image path
+        myGamePiece = new component(30, 30, "canvas/volleyball-icon-clipart-in-flat-animated-illustration-on-white-background-vector.jpg", 10, 120, "image"); // Replace "character.png" with your image path
         myGamePiece.gravity = 0.05;
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
