--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -29,7 +29,7 @@ function startGame() {
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
         // Initialize audio effects
-        crashSound = new Audio('crash.mp3'); // Replace with correct path to your crash sound file
+        crashSound = new Audio('canvas/canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); // Replace with correct path to your crash sound file
         backgroundMusic = new Audio('background.mp3'); // Replace with correct path to your background music file
         backgroundMusic.loop = true; // Loop background music
 
