--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -29,8 +29,8 @@ function startGame() {
         myScore = new component("30px", "Consolas", "blue", 280, 40, "text");
 
         // Initialize audio effects
-        crashSound = new Audio('ntriolo.github.io/canvas/canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); // Replace with correct path to your crash sound file
-        backgroundMusic = new Audio('background.mp3'); // Replace with correct path to your background music file
+        crashSound = new Audio('canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); // Replace with correct path to your crash sound file
+        backgroundMusic = new Audio('Background music FREE DOWNLOAD (194).mp3'); // Replace with correct path to your background music file
         backgroundMusic.loop = true; // Loop background music
 
         myGameArea.start();
