--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -26,7 +26,7 @@ function startGame() {
     if (!gameRunning) {
         myGamePiece = new component(30, 30,'Army man.jpeg', 10, 120, "image"); // Replace "character.png" with your image path
         myGamePiece.gravity = 0.05;
-        myScore = new component("30px", "Consolas", "blue", 280, 40, "text");
+        myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
         // Initialize audio effects
         crashSound = new Audio('canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); // Replace with correct path to your crash sound file
