--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -26,7 +26,7 @@ var gameInterval;
 function startGame() {
     if (!gameRunning) {
         // Create the game character (image instead of red square)
-        myGamePiece = new component(30, 30, "character.png", 10, 120, "image"); // Replace "character.png" with your image path
+        myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image"); // Replace "character.png" with your image path
         myGamePiece.gravity = 0.05;
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
