--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -36,7 +36,7 @@ function startGame() {
         backgroundMusic.loop = true;
 
         // Load background image
-        backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "background.png", 0, 0, "background"); // Replace "background.png" with your image path
+        backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/run%20down%20city%20background.webp", 0, 0, "background"); // Replace "background.png" with your image path
 
         myGameArea.start();
         gameRunning = true; 
